Update Module 9 code

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -145,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11fb122e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x116325040>"
       ]
      },
      "execution_count": 10,
@@ -423,14 +423,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Start date in the format yyyy-mm-dd2017-06-01\n",
+      "Enter End date in the format yyyy-mm-dd2017-06-30\n",
+      "[71.0, 77.21989528795811, 83.0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "\n",
+    "def calc_temps(x, y):\n",
+    "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]\n",
+    "\n",
+    "    if not end:\n",
+    "        results = session.query(*sel).\\\n",
+    "            filter(Measurement.date >= start).\\\n",
+    "            filter(Measurement.date <= end).all()\n",
+    "        temps = list(np.ravel(results))\n",
+    "        return jsonify(temps)\n",
+    "\n",
+    "    results = session.query(*sel).\\\n",
+    "        filter(Measurement.date >= start).\\\n",
+    "        filter(Measurement.date <= end).all()\n",
+    "    temps = list(np.ravel(results))\n",
+    "\n",
+    "    return temps\n",
+    "\n",
+    "start = input('Enter Start date in the format yyyy-mm-dd')\n",
+    "end = input('Enter End date in the format yyyy-mm-dd')\n",
+    "\n",
+    "ans = calc_temps(start, end)\n",
+    "print(ans)"
    ]
   },
   {
