Update Challenge 9 files

--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -100,8 +100,7 @@
     "results_jun = []\n",
     "results_jun = session.query(Measurement.date, Measurement.tobs).filter(extract('month', Measurement.date) == '06').all()\n",
     "\n",
-    "print(results_jun)\n",
-    "\n"
+    "print(results_jun)"
    ]
   },
   {
